TripBooking Details Page added

--- a/src/index.css
+++ b/src/index.css
@@ -42,6 +42,11 @@ code {
   margin: 0 auto;
 }
 
+.profile-img{
+  width:200px!important;
+  height:200px!important;
+}
+
 /* login page css */
 #loginPage{
   height:100vh;
